<resources>
    <!--Login screen-->
    <string name="app_name">Care Assistant</string>
    <string name="register">Register</string>
    <string name="signIn">Sign In</string>
    <string name="login">User Name</string>
    <string name="password">Password</string>
    <string name="invalidLoginOrPassword">Incorrect login or password!</string>
    <string name="logout">Log Out</string>
    <string name="logginInProgress">Login in progress</string>

    <!--Register screen-->
    <string name="confirmPassword">Repeat password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone number</string>
    <string name="failedRegister">Registration unsuccessful</string>
    <string name="doneRegister">Registration successful</string>
    <string name="passwordNotMatch">Passwords are different</string>
    <string name="completeAllFields">Complete all fields</string>

    <!--Messages-->
    <string name="messageErrorTitle">Error</string>
    <string name="connectionProblem">Connection error</string>

    <!--Progress-->
    <string name="loadingLocation">Loading location...</string>

    <!--Menu-->
    <string name="saveCurrentLocalization">Save current location</string>
    <string name="navigateToLocation">Navigate to place</string>
    <string name="switchFlashlight">Turn on flashlight</string>
    <string name="SOS">SOS</string>

    <!--Save localization-->
    <string name="nameOfLocalization">Name</string>
    <string name="saveLocalization">Save</string>

    <string name="GPSAlertDialogTitle">GPSAlertDialogTitle</string>
    <string name="GPSAlertDialogMessage">GPSAlertDialogMessage</string>
    <string name="action_settings">OK</string>

    <string name="errorDuringSaveLocation">Error during saving location!</string>
    <string name="locationSaved">Location saved correctly!</string>


    <!--Call-->
    <string name="callTo">Call to...</string>
    <string name="loadingContacts">Loading contacts...</string>


    <!--Common-->
    <string name="internetConnectionError">Internet connection error!</string>
    <string name="title_activity_maps">Map</string>
    <string name="cancel">Cancel</string>

    <!---->
    <!--&lt;!&ndash;Configuration&ndash;&gt;-->
    <!--&lt;!&ndash;<string name="urlService">https://senior1.herokuapp.com/</string>&ndash;&gt;-->
    <!--<string name="urlService">http://192.168.1.103:8090/</string>-->
    <!--&lt;!&ndash;Login screen&ndash;&gt;-->
    <!--<string name="app_name">Care Assistant</string>-->
    <!--<string name="register">Zarejestruj</string>-->
    <!--<string name="signIn">Zaloguj</string>-->
    <!--<string name="login">Login</string>-->
    <!--<string name="password">Haslo</string>-->
    <!--<string name="invalidLoginOrPassword">Nieprawidłowy login lub hasło</string>-->
    <!--<string name="logout">Wyloguj</string>-->

    <!--&lt;!&ndash;Register screen&ndash;&gt;-->
    <!--<string name="confirmPassword">Powtórz hasło</string>-->
    <!--<string name="firstName">Imie</string>-->
    <!--<string name="lastName">Nazwisko</string>-->
    <!--<string name="email">Email</string>-->
    <!--<string name="phoneNumber">Numer telefonu</string>-->
    <!--<string name="failedRegister">Rejestracja niepomyślna</string>-->
    <!--<string name="doneRegister">Rejestracja przebiegła pomyślnie</string>-->
    <!--<string name="passwordNotMatch">Hasła różnią się od siebie</string>-->
    <!--<string name="compleatAllFields">Uzupełnij wszystkie pola</string>-->

    <!--&lt;!&ndash;Messages&ndash;&gt;-->
    <!--<string name="messageErrorTitle">Błąd</string>-->
    <!--<string name="connectionProblem">Błąd połączenia</string>-->

    <!--&lt;!&ndash;Menu&ndash;&gt;-->
    <!--<string name="saveCurrentLocalization">Zapisz aktualną pozycję</string>-->

    <!--&lt;!&ndash;Save localization&ndash;&gt;-->
    <!--<string name="nameOfLocalization">Nazwa</string>-->
    <!--<string name="saveLocalization">Zapisz</string>-->

    <!--<string name="GPSAlertDialogTitle">GPSAlertDialogTitle</string>-->
    <!--<string name="GPSAlertDialogMessage">GPSAlertDialogMessage</string>-->
    <!--<string name="action_settings">OK</string>-->
    <!--<string name="cancel">Cancel</string>-->

    <!--<string name="errorDuringSaveLocation">Błąd podczas zapisywania lokalizacji</string>-->
    <!--<string name="locationSaved">Lokalizacja zapisana pomyślnie!</string>-->

</resources>
