<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.edu.pwste.goco.senior.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="7dp"
        tools:layout_editor_absoluteX="-42dp">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="btnLogoutClick"
            android:text="@string/logout" />

        <Button
            style="@style/buttons"
            android:id="@+id/btnSaveLocalization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveCurrentLocalization"
            android:onClick="saveCurrentLocation"/>

        <Button
            android:id="@+id/btnNavigateToLocation"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showNavigateToPlace"
            android:text="@string/navigateToLocation" />

        <Button
            style="@style/buttons"
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
